--- a/platformGame.vcxproj.filters
+++ b/platformGame.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClInclude Include="src\Entity\Entities\TrailBullet.hpp">
       <Filter>src\Entity\Entities</Filter>
     </ClInclude>
+    <ClInclude Include="src\Level\LevelList.hpp">
+      <Filter>src\Level</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Entity\Entities\BoxBoundary.cpp">
@@ -64,6 +67,9 @@
     </Filter>
     <Filter Include="src\Entity\Entities">
       <UniqueIdentifier>{8b48b7cb-4461-4f1b-aa56-e32e5f01d67e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Level">
+      <UniqueIdentifier>{e8a5102e-a5e0-499e-a711-5362c67cbe8c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
