Wrote test code for levels. Wrote functions to convert sfml into box2d coordinates and vice versa.

--- a/platformGame.vcxproj
+++ b/platformGame.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="src\Entity\WorldEntity.hpp" />
     <ClInclude Include="src\Level\AbstractLevel.hpp" />
     <ClInclude Include="src\Level\Levels\TestLevel.hpp" />
+    <ClInclude Include="src\sfmlToBox2D.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Entity\Entities\BasicPlatform.cpp" />
@@ -34,6 +35,7 @@
     <ClCompile Include="src\Level\AbstractLevel.cpp" />
     <ClCompile Include="src\Level\Levels\TestLevel.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\sfmlToBox2D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="platformGame.sln" />
