Began working on animations again

--- a/platformGame.vcxproj
+++ b/platformGame.vcxproj
@@ -13,6 +13,9 @@
   <ItemGroup>
     <ClInclude Include="src\constants.hpp" />
     <ClInclude Include="src\Entity\AbstractEntity.hpp" />
+    <ClInclude Include="src\Entity\Animation\AnimatedSprite.hpp" />
+    <ClInclude Include="src\Entity\Animation\Animation.hpp" />
+    <ClInclude Include="src\Entity\Animation\Animator.hpp" />
     <ClInclude Include="src\Entity\Entities\BasicPlatform.hpp" />
     <ClInclude Include="src\Entity\Entities\BasicSlope.hpp" />
     <ClInclude Include="src\Entity\Entities\BoxBoundary.hpp" />
@@ -27,6 +30,9 @@
     <ClInclude Include="src\sfmlToBox2D.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Entity\Animation\AnimatedSprite.cpp" />
+    <ClCompile Include="src\Entity\Animation\Animation.cpp" />
+    <ClCompile Include="src\Entity\Animation\Animator.cpp" />
     <ClCompile Include="src\Entity\Entities\BasicPlatform.cpp" />
     <ClCompile Include="src\Entity\Entities\BasicSlope.cpp" />
     <ClCompile Include="src\Entity\Entities\BoxBoundary.cpp" />
