Working on animations

--- a/platformGame.vcxproj
+++ b/platformGame.vcxproj
@@ -11,11 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Animation\Animator.hpp" />
     <ClInclude Include="src\constants.hpp" />
     <ClInclude Include="src\Entity\AbstractEntity.hpp" />
-    <ClInclude Include="src\Entity\Animation\AnimatedSprite.hpp" />
-    <ClInclude Include="src\Entity\Animation\Animation.hpp" />
-    <ClInclude Include="src\Entity\Animation\Animator.hpp" />
     <ClInclude Include="src\Entity\Entities\AnimatedSquare.hpp" />
     <ClInclude Include="src\Entity\Entities\BasicPlatform.hpp" />
     <ClInclude Include="src\Entity\Entities\BasicSlope.hpp" />
@@ -31,9 +29,7 @@
     <ClInclude Include="src\sfmlToBox2D.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Entity\Animation\AnimatedSprite.cpp" />
-    <ClCompile Include="src\Entity\Animation\Animation.cpp" />
-    <ClCompile Include="src\Entity\Animation\Animator.cpp" />
+    <ClCompile Include="src\Animation\Animator.cpp" />
     <ClCompile Include="src\Entity\Entities\AnimatedSquare.cpp" />
     <ClCompile Include="src\Entity\Entities\BasicPlatform.cpp" />
     <ClCompile Include="src\Entity\Entities\BasicSlope.cpp" />
