--- a/platformGame.vcxproj.filters
+++ b/platformGame.vcxproj.filters
@@ -43,17 +43,11 @@
     <ClInclude Include="src\Entity\EntityContactListener.hpp">
       <Filter>src\Entity</Filter>
     </ClInclude>
-    <ClInclude Include="src\Entity\Animation\Animation.hpp">
-      <Filter>src\Entity\Animation</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Entity\Animation\AnimatedSprite.hpp">
-      <Filter>src\Entity\Animation</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Entity\Animation\Animator.hpp">
-      <Filter>src\Entity\Animation</Filter>
-    </ClInclude>
     <ClInclude Include="src\Entity\Entities\AnimatedSquare.hpp">
       <Filter>src\Entity\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Animation\Animator.hpp">
+      <Filter>src\Entity\Animation</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -90,17 +84,11 @@
     <ClCompile Include="src\Entity\EntityContactListener.cpp">
       <Filter>src\Entity</Filter>
     </ClCompile>
-    <ClCompile Include="src\Entity\Animation\Animator.cpp">
-      <Filter>src\Entity\Animation</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Entity\Animation\AnimatedSprite.cpp">
-      <Filter>src\Entity\Animation</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Entity\Animation\Animation.cpp">
-      <Filter>src\Entity\Animation</Filter>
-    </ClCompile>
     <ClCompile Include="src\Entity\Entities\AnimatedSquare.cpp">
       <Filter>src\Entity\Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Animation\Animator.cpp">
+      <Filter>src\Entity\Animation</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
